tests/tools/checker/negative/duplicate_param.nv
fn main(x: int, x: int) : void {
    return;
}
